# spidermonkey-wasm-rs

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.sh  update-wasi-sdk.sh
.github/workflows/: ci.yml
crates/repl-example/: Cargo.toml  build.sh
crates/repl-example/src/: main.rs
crates/spidermonkey-wasm/: Cargo.toml
crates/spidermonkey-wasm-sys/: COMMIT  Cargo.toml  LICENSE  Makefile  build.rs  build.sh  mozconfig  update-wasi-sdk.sh
crates/spidermonkey-wasm-sys/.cargo/: config
crates/spidermonkey-wasm-sys/src/: api.cpp  api.h  exports.cpp  exports.h  jsclass.rs  jsgc.rs  jsrealm.rs  jssourcetext.rs  jsval.rs  lib.rs
crates/spidermonkey-wasm-sys/tests/: integration.rs  sanity.rs
crates/spidermonkey-wasm/.cargo/: config
crates/spidermonkey-wasm/src/: compilation_options.rs  handle.rs  js.rs  lib.rs  rooted.rs  runtime.rs  utf8_source.rs
crates/spidermonkey-wasm/tests/: compile.rs  context_opts.rs  eval.rs  realm_opts.rs
