[package]
name = "spidermonkey-wasm-sys"
version = "0.1.0"
edition = "2018"
include = [
  "spidermonkey-wasm-build",
  "src/**/*",
  "build.rs",
  "vendor/**/*",
  ".cargo/**/*",
]

[profile.release]
opt-level = 3

[dependencies]
cxx = "1.0"
link-cplusplus = { version = "1.0", features = ["nothing"] }

[build-dependencies]
fs_extra = "1.2.0"
walkdir = "2"
cxx-build = "1.0"

[features]
moz_debug = []